fix(openapi): fix duplicate operation IDs
